# hax-em

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish_and_tag.yml
hax/: __init__.py
hax/checkpointer/: __init__.py  nn_checkpointer.py
hax/cli/: cli.py
hax/generators/: __init__.py  generator_metadata.py  generator_numpy.py
hax/layers/: __init__.py  attention.py  mamba_vision.py  siren.py
hax/metrics/: __init__.py
hax/networks/: __init__.py  cryocheck.py  flexconsensus.py  hetsiren.py  image_gray_scale_adjustment.py  reconsiren.py  reconsiren_het_only.py  volume_gray_scale_adjustment.py  zernike3deep.py
hax/programs/: __init__.py  decode_states_from_latents.py  estimate_latent_covariances.py  filter_latents.py  gaussian_volume_fitting.py  modart.py  zart.py
hax/schedulers/: __init__.py  cosine_annealing.py
hax/utils/: __init__.py  convolutional_filters.py  decorators.py  fourier_filters.py  geometric_losses.py  hyperparameter_tuning.py  jax_tsp.py  losses.py  miscellaneous.py  optimal_transport_functions.py  plots.py
hax/viewers/annotate_space/: annotate_space.py
hax/viewers/annotate_space/chimerax_connection/: viewer_salesman_solver.py
hax/viewers/annotate_space/viewer_socket/: server.py
hax/viewers/server_loading_functions/: load_model.py  template.py
