# Keeping Hatch in the loop in case it is useful in the future

[build-system]
#requires = ["hatchling", "hatch-vcs", "hatch-requirements-txt"]
#build-backend = "hatchling.build"
requires = ["setuptools<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hax"
dynamic = ["version",]
description = "Hax dependencies"
requires-python = ">=3.11,<3.12"
# tfp-nightly[jax]<0.27.0
# jaxkd<=0.1.2
dependencies = ["einops<=0.8.2", "tqdm<=4.67.2", "matplotlib<=3.10.8", "numpy<=2.2.6", "scikit-learn<=1.8.0",
                "xmipp_metadata>=1.2.3", "grain<=0.2.15", "pandas<=2.2.3", "flax==0.12.4", "orbax<=0.1.9",
                "orbax-checkpoint<=0.11.32", "cloudpickle<=3.1.2", "dm_pix<=0.4.4", "tensorboard<=2.19.0", "pynndescent<=0.6.0",
                "napari[all] >=0.6.0, < 0.7.0", "napari-molecule-reader", "umap-learn<=0.5.11", "setuptools==81",
                "mmap_ninja<=0.8.2", "lz4<=4.4.5", "tensorboardX<=2.6.4", "tbb<=2022.3.1", "sympy<=1.14.0", "ott-jax<=0.6.0"]

[project.scripts]
hax_project_manager = "hax.cli:main"

[project.optional-dependencies]
torch_datasets = ["torch<=2.0.1"]
tensorflow_datasets = ["tensorflow<=2.19.0", "tensorflow-datasets<=4.9.9"]
cuda12 = ["jax[cuda12]==0.9.0", "cuml-cu12==25.12.*", "cupy-cuda13x>13.6.0,<=14.0.1"]
cuda13 = ["jax[cuda13]==0.9.0", "cuml-cu13==25.12.*", "cupy-cuda13x>13.6.0,<=14.0.1"]

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[tool.setuptools.package-data]
"hax" = ["viewers/server_loading_functions/*", "viewers/annotate_space/media/*"]

[tool.setuptools.dynamic]
version = {attr = "hax.__version__"}

#[tool.hatch.version]
#path = "hax/__init__.py"
#
#[tool.hatch.metadata.hooks.requirements_txt]
#files = ["requirements.txt"]
#
## https://mypy.readthedocs.io/en/stable/config_file.html
#[tool.mypy]
#files = "src/**/"
#strict = true
#disallow_any_generics = false
#disallow_subclassing_any = false
#show_error_codes = true
#pretty = true

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cpu", "https://download.pytorch.org/whl/cpu"]
